src/gpuarray/array.h


typedef struct _GpuArray {
  gpudata *data;
  const gpuarray_buffer_ops *ops;
  size_t *dimensions;
  ssize_t *strides;
  size_t offset;
  unsigned int nd;
  int flags;
  int typecode;
#define GA_C_CONTIGUOUS   0x0001
#define GA_F_CONTIGUOUS   0x0002
#define GA_ALIGNED        0x0100
#define GA_WRITEABLE      0x0400
#define GA_BEHAVED        (GA_ALIGNED|GA_WRITEABLE)
#define GA_CARRAY         (GA_C_CONTIGUOUS|GA_BEHAVED)
#define GA_FARRAY         (GA_F_CONTIGUOUS|GA_BEHAVED)
} GpuArray;
typedef enum _ga_order {
  GA_ANY_ORDER=-1,
  GA_C_ORDER=0,
  GA_F_ORDER=1
} ga_order;
static inline int GpuArray_CHKFLAGS(const GpuArray *a, int flags) {
  return (a->flags & flags) == flags;
}
#define GpuArray_ISONESEGMENT(a) ((a)->flags & (GA_C_CONTIGUOUS|GA_F_CONTIGUOUS))
GPUARRAY_PUBLIC int GpuArray_empty(GpuArray *a, const gpuarray_buffer_ops *ops,
                                  void *ctx, int typecode, unsigned int nd,
                                  const size_t *dims, ga_order ord);
GPUARRAY_PUBLIC int GpuArray_fromdata(GpuArray *a,
                                     const gpuarray_buffer_ops *ops,
                                     gpudata *data, size_t offset,
                                     int typecode, unsigned int nd,
                                     const size_t *dims,
                                     const ssize_t *strides, int writeable);
GPUARRAY_PUBLIC int GpuArray_copy_from_host(GpuArray *a,
                                           const gpuarray_buffer_ops *ops,
                                           void *ctx, void *buf, int typecode,
                                           unsigned int nd, const size_t *dims,
                                           const ssize_t *strides);
GPUARRAY_PUBLIC int GpuArray_view(GpuArray *v, const GpuArray *a);
GPUARRAY_PUBLIC int GpuArray_sync(GpuArray *a);
GPUARRAY_PUBLIC int GpuArray_index(GpuArray *r, const GpuArray *a,
                                  const ssize_t *starts, const ssize_t *stops,
                                  const ssize_t *steps);
GPUARRAY_PUBLIC int GpuArray_setarray(GpuArray *a, const GpuArray *v);
GPUARRAY_PUBLIC int GpuArray_reshape(GpuArray *res, const GpuArray *a,
                                    unsigned int nd, const size_t *newdims,
                                    ga_order ord, int nocopy);
GPUARRAY_PUBLIC int GpuArray_transpose(GpuArray *res, const GpuArray *a,
                                      const unsigned int *new_axes);
GPUARRAY_PUBLIC void GpuArray_clear(GpuArray *a);
GPUARRAY_PUBLIC int GpuArray_share(const GpuArray *a, const GpuArray *b);
GPUARRAY_PUBLIC void *GpuArray_context(const GpuArray *a);
GPUARRAY_PUBLIC int GpuArray_move(GpuArray *dst, const GpuArray *src);
GPUARRAY_PUBLIC int GpuArray_write(GpuArray *dst, const void *src,
                                  size_t src_sz);
GPUARRAY_PUBLIC int GpuArray_read(void *dst, size_t dst_sz,
                                 const GpuArray *src);
GPUARRAY_PUBLIC int GpuArray_memset(GpuArray *a, int data);
GPUARRAY_PUBLIC int GpuArray_copy(GpuArray *res, const GpuArray *a,
                                 ga_order order);
GPUARRAY_PUBLIC const char *GpuArray_error(const GpuArray *a, int err);
GPUARRAY_PUBLIC void GpuArray_fprintf(FILE *fd, const GpuArray *a);