src/compyte/buffer.h

struct _gpudata;
typedef struct _gpudata gpudata;
struct _gpukernel;
typedef struct _gpukernel gpukernel;
typedef struct _compyte_buffer_ops {
  void *(*buffer_init)(int dev, int *ret);
  void (*buffer_deinit)(void *ctx);
  gpudata *(*buffer_alloc)(void *ctx, size_t sz, int *ret);
  void (*buffer_free)(gpudata *);
  void *(*buffer_get_context)(gpudata *);
  int (*buffer_share)(gpudata *, gpudata *, int *ret);
  int (*buffer_move)(gpudata *dst, size_t dstoff, gpudata *src, size_t srcoff, size_t sz);
  int (*buffer_read)(void *dst, gpudata *src, size_t srcoff, size_t sz);
  int (*buffer_write)(gpudata *dst, size_t dstoff, const void *src, size_t sz);
  int (*buffer_memset)(gpudata *dst, size_t dstoff, int data);
  gpukernel *(*buffer_newkernel)(void *ctx, unsigned int count, 
				 const char **strings, const size_t *lengths,
				 const char *fname, int flags, int *ret);
  void (*buffer_freekernel)(gpukernel *k);
  void *(*buffer_get_kernel_context)(gpukernel *k);
  int (*buffer_setkernelarg)(gpukernel *k, unsigned int index,
			     int typecode, const void *val);
  int (*buffer_setkernelargbuf)(gpukernel *k, unsigned int index,
				gpudata *b);
  int (*buffer_callkernel)(gpukernel *k, size_t n);
  int (*buffer_extcopy)(gpudata *input, size_t ioff, gpudata *output, size_t ooff,
                        int intype, int outtype, unsigned int a_nd,
                        const size_t *a_dims, const ssize_t *a_str,
                        unsigned int b_nd, const size_t *b_dims,
                        const ssize_t *b_str);
  const char *(*buffer_error)(gpudata *b);
} compyte_buffer_ops;
typedef enum _ga_usefl {
  GA_USE_CLUDA =      0x01,
  GA_USE_SMALL =      0x02,
  GA_USE_DOUBLE =     0x04,
  GA_USE_COMPLEX =    0x08,
  GA_USE_HALF =       0x10,
  GA_USE_PTX =      0x1000,
} ga_usefl;
COMPYTE_PUBLIC const char *Gpu_error(compyte_buffer_ops *o, gpudata *b,
				     int err);
COMPYTE_PUBLIC compyte_buffer_ops *compyte_get_ops(const char *name);