src/compyte/kernel.h


typedef struct _GpuKernel {
  gpukernel *k;
  const compyte_buffer_ops *ops;
} GpuKernel;
COMPYTE_PUBLIC int GpuKernel_init(GpuKernel *k, const compyte_buffer_ops *ops,
                                  void *ctx, unsigned int count,
                                  const char **strs, size_t *lens,
                                  const char *name, int flags);
COMPYTE_PUBLIC void GpuKernel_clear(GpuKernel *k);
COMPYTE_PUBLIC void *GpuKernel_context(GpuKernel *k);
COMPYTE_PUBLIC int GpuKernel_setarg(GpuKernel *k, unsigned int index,
                                    int typecode, void *arg);
COMPYTE_PUBLIC int GpuKernel_setbufarg(GpuKernel *k, unsigned int index,
                                       GpuArray *a);
COMPYTE_PUBLIC int GpuKernel_call(GpuKernel *k, size_t n,
                                  size_t ls, size_t gs);